Fixing CORS error in deployed version